// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageActions matches snapshot for assistant message 1`] = `
<div>
  <div
    class="flex items-center gap-0.5 mt-1 justify-start"
  >
    <button
      aria-label="Copy message"
      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-copy w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
    </button>
    <button
      aria-label="Regenerate response"
      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`MessageActions matches snapshot for user message 1`] = `
<div>
  <div
    class="flex items-center gap-0.5 mt-1 justify-end"
  >
    <button
      aria-label="Copy message"
      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-copy w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
    </button>
    <button
      aria-label="Edit message"
      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-pencil w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`MessageActions matches snapshot in edit mode 1`] = `
<div>
  <div
    class="mt-2"
  >
    <div
      class="relative bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20"
    >
      <textarea
        class="w-full bg-transparent text-white px-3 py-2 pr-20 resize-none outline-none min-h-16 text-sm"
        rows="2"
      >
        Test message
      </textarea>
      <div
        class="absolute right-2 bottom-2 flex gap-1"
      >
        <button
          aria-label="Cancel edit"
          class="p-1.5 transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent text-silver/60 hover:text-error"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
        <button
          aria-label="Submit edit"
          class="p-1.5 transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent text-silver/60 hover:text-gold"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-send w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
            />
            <path
              d="m21.854 2.147-10.94 10.939"
            />
          </svg>
        </button>
      </div>
    </div>
    <p
      class="text-xs text-silver/50 mt-1"
    >
      Press Enter to submit, Esc to cancel. This will create a new branch.
    </p>
  </div>
</div>
`;
